--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
-    "functions": {
-       "api/index.py": {"maxDuration": 10}
-     },
-    "routes": [{
-      "src": "/(.*)", "dest": "api/index"
-     }]
-  }
+	"functions": {
+		"api/index.py": { "runtime": "@vercel/python", "maxDuration": 10 }
+	},
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "api/index"
+		}
+	]
+}
