--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
 	"functions": {
-		"api/index.py": { "runtime": "@vercel/python", "maxDuration": 10 }
+		"api/index.py": { "runtime": "@vercel/python@2.0.1", "maxDuration": 10 }
 	},
 	"routes": [
 		{
