--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
 	"functions": {
-		"api/index.py": { "runtime": "@vercel/python@2.0.1", "maxDuration": 10 }
-	},
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "api/index"
-		}
-	]
+		"api/index.py": { "maxDuration": 10 }
+	}
 }
