--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-	"functions": {
-		"api/index.py": { "maxDuration": 10 }
-	}
+	"builds": [{ "src": "api/index.py", "use": "@now/python" }],
+	"routes": [{ "src": "/(.*)", "dest": "api/index.py" }]
 }
