--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
-motor==2.4.0
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==4.0.0
+click==8.0.0
+discord.py==1.7.2
 Flask==2.0.0
 Flask-Assets==2.0
-python-decouple==3.4
 Flask-Discord==0.1.64
+idna==2.10
+itsdangerous==2.0.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
+motor==2.4.0
+multidict==5.1.0
+oauthlib==3.1.0
+PyJWT==2.1.0
+pymongo==3.11.4
+python-decouple==3.4
 python-dotenv==0.17.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+typing-extensions==3.10.0.0
+urllib3==1.26.4
+webassets==2.0
+Werkzeug==2.0.0
+yarl==1.6.3
